--- a/client/fund-os/src/index.css
+++ b/client/fund-os/src/index.css
@@ -132,3 +132,7 @@ button:focus-visible {
   border: 2px solid #3A1772;
   padding: 12px;
 }
+
+.create-project-form{
+  background-color: #F2CD5D;
+}
