--- a/client/fund-os/src/index.css
+++ b/client/fund-os/src/index.css
@@ -137,7 +137,7 @@ button:focus-visible {
   background-color: #F2CD5D;
 }
 
-.create-account{
+.create-account-login{
   background-color: #F2CD5D;
 }
 
