styling updates and readme

--- a/client/fund-os/src/index.css
+++ b/client/fund-os/src/index.css
@@ -137,6 +137,10 @@ button:focus-visible {
   background-color: #F2CD5D;
 }
 
+.account-blobs{
+  background-color: #F2CD5D;
+}
+
 .create-account-login{
   background-color: #F2CD5D;
 }
